--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "vue-cli-service build",
+    "build": "node_modules/.bin/vue-cli-service build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
