--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.0.32",
     "slick-carousel": "^1.8.1",
     "vue": "^3.2.47",
+    "vue-intersect": "^1.1.6",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
